[package]
name = "rts-core"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.11"
crossbeam = "^0.8"
rand = "^0.7"

[dependencies.legion]
version = "^0.3.1"
default-features = false
features = ["codegen"]
