[package]
name = "rts-render"
version = "0.1.0"
authors = ["Anton Gushcha <ncrashed@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.11"

[dependencies.sdl2]
version = "^0.34"
default-features = false
features = ["mixer"]

[dependencies.legion]
version = "^0.3.1"
default-features = false
features = ["codegen"]
